# io-discovery

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  build.rs  default.nix  deny.toml  flake.nix  install.sh  package.nix  shell.nix
.github/workflows/: releases.yml
examples/: autoconfig_dns_mx.rs  autoconfig_mx.rs  pacc_client.rs  std_tcp_query.rs  std_udp_query.rs
src/: coroutine.rs  dns_txt.rs  http_get.rs  isp.rs  isp_fallback.rs  ispdb.rs  lib.rs  main.rs
src/autoconfig/: cli.rs  client.rs  command.rs  dns_mx.rs  dns_srv.rs  dns_txt.rs  isp.rs  isp_fallback.rs  ispdb.rs  mailconf.rs  mod.rs  mx.rs  serde.rs  types.rs
src/autoconfig/coroutines/: dns_mx.rs  dns_srv.rs  isp.rs  mailconf.rs  mod.rs
src/pacc/: cli.rs  client.rs  command.rs  coroutine.rs  discover.rs  fetch.rs  mod.rs  types.rs  verify.rs
src/rfc6186/: cli.rs  client.rs  discover.rs  mod.rs  srv.rs  types.rs
src/rfc6764/: cli.rs  client.rs  discover.rs  mod.rs  srv.rs  types.rs
src/shared/: constants.rs  defaults.rs  dns.rs  dns_txt.rs  http.rs  http_get.rs  mod.rs  pool.rs
tests/: rfc1035.rs  rfc2782.rs  rfc3596.rs  rfc6698.rs  rfc6763.rs
tests/common/: mod.rs
