[package]
name = "io-discovery"
description = "I/O-free discovery client library"
version = "0.0.1"
authors = ["Clément DOUIN <pimalaya.org@posteo.net>"]
rust-version = "1.87"
edition = "2024"
license = "MIT OR Apache-2.0"
categories = ["network-programming", "no-std"]
keywords = ["dns", "io-free", "coroutine", "no-std", "sans-io"]
homepage = "https://pimalaya.org"
documentation = "https://docs.rs/io-discovery/latest/io_discovery"
repository = "https://github.com/pimalaya/io-discovery"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["autoconfig", "cli", "rustls-ring"]
cli = ["dep:anyhow", "dep:clap", "pimalaya-toolbox/terminal"]
autoconfig = ["dep:io-http", "dep:serde", "dep:serde-xml-rs", "dep:url", "pimalaya-toolbox/http"]
rustls-ring = ["pimalaya-toolbox/rustls-ring"]
rustls-aws = ["pimalaya-toolbox/rustls-aws"]
native-tls = ["pimalaya-toolbox/native-tls"]

[build-dependencies]
pimalaya-toolbox = { version = "0.0.4", default-features = false, features = ["build"], optional = true }

[dev-dependencies]
env_logger = "0.11"
io-http = { version = "0.0.3", default-features = false }

[dependencies]
anyhow = { version = "1", default-features = false, optional = true }
clap = { version = "4.4", features = ["derive", "wrap_help"], optional = true }
domain = { version = "0.12", default-features = false, features = ["alloc", "std", "unstable-new"] }
io-http = { version = "0.0.3", default-features = false, optional = true }
log = { version = "0.4", default-features = false }
pimalaya-toolbox = { version = "0.0.4", default-features = false, optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde-xml-rs = { version = "0.7", optional = true }
thiserror = { version = "2", default-features = false }
url = { version = "2.2", default-features = false, optional = true }

[patch.crates-io]
domain = { git = "https://github.com/soywod/domain", branch = "new-srv" }
io-http.git = "https://github.com/pimalaya/io-http"
pimalaya-toolbox.git = "https://github.com/pimalaya/toolbox"
